--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/twig-pack": "*",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "webonyx/graphql-php": "^0.13.8"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
